--- a/Report.ipynb
+++ b/Report.ipynb
@@ -1954,7 +1954,7 @@
    "metadata": {},
    "source": [
     "We'll use the mean-load and shape predictors to obtain a baseline forecast.\n",
-    "This baseline forecast will be the starting point of our forecastes."
+    "This baseline forecast will be the starting point of our forecaster."
    ]
   },
   {
