--- a/Report.ipynb
+++ b/Report.ipynb
@@ -1945,7 +1945,7 @@
     }
    ],
    "source": [
-    "# let as check that we can approximate daily electricity curves as linear combinations of cluster centers\n",
+    "# let us check that we can approximate daily electricity curves as linear combinations of cluster centers\n",
     "\n",
     "day = 10 # choose a day\n",
     "load_curve = data_table.iloc[:,day].to_numpy()\n",
@@ -2019,7 +2019,7 @@
     }
    ],
    "source": [
-    "# let as choose a day\n",
+    "# let us choose a day\n",
     "day = '2020-03-16'\n",
     "i = 75 \n",
     "load_curve = data_table.iloc[:,i].to_numpy()\n",
